--- a/src/App.css
+++ b/src/App.css
@@ -79,11 +79,13 @@ form button:hover {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   max-width: 100%;
+  width: 400px;
+  height: 250px;
   padding: 10px;
-  margin: 0 10rem;
+  margin: 0;
 }
 
 .characters > a {
@@ -100,6 +102,24 @@ form button:hover {
   padding: 1rem;
   border: 4px solid var(--text);
   margin: 0.5rem;
-  height: 200px;
+  width: 250px;
+  height: 400px;
   justify-content: center;
+  max-width: 100%;
+  overflow: hidden;
+  word-wrap: break-word;
+}
+.button {
+  background-color: #9583a4;
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.5rem;
+  margin-right: 0.5rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #FFA550;
 }
